# llzk-lib

./: .clang-format  .clang-tidy  .gitignore  0__overview_8md.html  1__setup_8md.html  3__syntax_8md.html  4__code__of__conduct_8md.html  5__contributing_8md.html  7__dialects_8md.html  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  _a_p_int_helper_8cpp.html  _a_p_int_helper_8cpp.js  _a_p_int_helper_8cpp__incl.md5  _a_p_int_helper_8cpp_source.html  _a_p_int_helper_8h__incl.map  _a_p_int_helper_8h_source.html  _abstract_lattice_value_8h__incl.md5  _affine_helper_8cpp.html  _affine_helper_8cpp.js  _affine_helper_8cpp__incl.map  _affine_helper_8cpp_source.html  _affine_helper_8h.html  _affine_helper_8h.js  _affine_helper_8h__dep__incl.md5  _affine_helper_8h__incl.map  _affine_helper_8h_source.html  _analysis_passes_8h.html  _analysis_passes_8h_8inc__dep__incl.md5  _analysis_passes_8h_8inc_source.html  _analysis_passes_8h__dep__incl.map  _analysis_passes_8h__incl.map  _analysis_passes_8h__incl.md5  _analysis_passes_8td_source.html  _analysis_wrappers_8h.js  _analysis_wrappers_8h__dep__incl.map  _analysis_wrappers_8h__dep__incl.md5  _analysis_wrappers_8h__incl.map  (+2014 more)
lib/: CMakeLists.txt
lib/Analysis/: AnalysisPassEnums.cpp  AnalysisPassesEnums.cpp  AnalysisUtil.cpp  CMakeLists.txt  CallGraph.cpp  CallGraphAnalyses.cpp  CallGraphPasses.cpp  ConstrainRef.cpp  ConstrainRefLattice.cpp  ConstraintDependencyGraph.cpp  ConstraintDependencyGraphPass.cpp  DenseAnalysis.cpp  Field.cpp  IntervalAnalysis.cpp  IntervalAnalysisPass.cpp  Intervals.cpp  LightweightSignalEquivalenceAnalysis.cpp  SourceRef.cpp  SourceRefLattice.cpp  SparseAnalysis.cpp  SymbolDefTree.cpp  SymbolDefTreePass.cpp  SymbolUseGraph.cpp  SymbolUseGraphPass.cpp
lib/Bindings/Python/: LLZKRegistration.cpp
lib/CAPI/: Builder.cpp  CMakeLists.txt  Constants.cpp  InitDialects.cpp  Support.cpp  Transforms.cpp  Typing.cpp  Validators.cpp
lib/CAPI/Dialect/: Array.cpp  Bool.cpp  Cast.cpp  Constrain.cpp  Felt.cpp  Function.cpp  Global.cpp  Include.cpp  LLZK.cpp  POD.cpp  Poly.cpp  Polymorphic.cpp  String.cpp  Struct.cpp  Undef.cpp
lib/Dialect/: CMakeLists.txt  InitDialects.cpp
lib/Dialect/Array/: CMakeLists.txt
lib/Dialect/Array/IR/: Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/Array/Transforms/: ArrayToScalarPass.cpp
lib/Dialect/Array/Util/: ArrayTypeHelper.cpp
lib/Dialect/Bool/: CMakeLists.txt
lib/Dialect/Bool/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Cast/: CMakeLists.txt
lib/Dialect/Cast/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Constrain/: CMakeLists.txt
lib/Dialect/Constrain/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Felt/: CMakeLists.txt
lib/Dialect/Felt/IR/: Attrs.cpp  Dialect.cpp  Ops.cpp
lib/Dialect/Function/: CMakeLists.txt
lib/Dialect/Function/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Global/: CMakeLists.txt
lib/Dialect/Global/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Include/: CMakeLists.txt
lib/Dialect/Include/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Include/Transforms/: InlineIncludesPass.cpp
lib/Dialect/Include/Util/: IncludeHelper.cpp
lib/Dialect/LLZK/: CMakeLists.txt
lib/Dialect/LLZK/Analysis/: CallGraph.cpp  CallGraphAnalyses.cpp  CallGraphPasses.cpp  ConstrainRef.cpp  ConstrainRefLattice.cpp  ConstraintDependencyGraph.cpp  ConstraintDependencyGraphPass.cpp  ConstraintSummary.cpp  ConstraintSummaryPass.cpp  DenseAnalysis.cpp  IntervalAnalysis.cpp  IntervalAnalysisPass.cpp
lib/Dialect/LLZK/IR/: AttributeHelper.cpp  Builders.cpp  Dialect.cpp  FuncOps.cpp  Ops.cpp  Types.cpp  Versioning.cpp
lib/Dialect/LLZK/Transforms/: LLZKArrayToScalarPass.cpp  LLZKDuplicateStructEliminationPass.cpp  LLZKFlatteningPass.cpp  LLZKInlineIncludesPass.cpp  LLZKInstantiateStructsPass.cpp  LLZKPasses.cpp  LLZKRedundantFunctionCallEliminationPass.cpp  LLZKRedundantOperationEliminationPass.cpp  LLZKRedundantReadAndWriteEliminationPass.cpp  LLZKUnusedDeclarationEliminationPass.cpp
lib/Dialect/LLZK/Util/: ArrayTypeHelper.cpp  IncludeHelper.cpp  SymbolHelper.cpp  SymbolLookup.cpp
lib/Dialect/LLZK/Validators/: LLZKValidationPasses.cpp
lib/Dialect/POD/: CMakeLists.txt
lib/Dialect/POD/IR/: Attrs.cpp  Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/Polymorphic/: CMakeLists.txt
lib/Dialect/Polymorphic/IR/: Dialect.cpp
lib/Dialect/Polymorphic/Transforms/: FlatteningPass.cpp  SharedImpl.h
lib/Dialect/Shared/: Builders.cpp  CMakeLists.txt  Ops.cpp
lib/Dialect/String/: CMakeLists.txt
lib/Dialect/Struct/: CMakeLists.txt
lib/Dialect/Undef/: CMakeLists.txt
lib/Dialect/ZKIR/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  LLZKArrayToScalarPass.cpp  LLZKComputeConstrainToProductPass.cpp  LLZKFlatteningPass.cpp  LLZKFuseProductLoopsPass.cpp  LLZKInlineIncludesPass.cpp  LLZKInlineStructsPass.cpp  LLZKInliningExtensions.cpp  LLZKLoweringUtils.cpp  LLZKPCLLoweringPass.cpp  LLZKPolyLoweringPass.cpp  LLZKR1CSLoweringPass.cpp  LLZKRedundantOperationEliminationPass.cpp  LLZKRedundantReadAndWriteEliminationPass.cpp  LLZKUnusedDeclarationEliminationPass.cpp  TransformationPassPipelines.cpp  WalkPatternRewriteDriver.cpp
lib/Util/: APIntHelper.cpp  AffineHelper.cpp  AffineHelpers.cpp  ArrayTypeHelper.cpp  AttributeHelper.cpp  CMakeLists.txt  Debug.cpp  DynamicAPIntHelper.cpp  IncludeHelper.cpp  OpHelper.cpp  SymbolHelper.cpp  SymbolLookup.cpp  SymbolTableLLZK.cpp  TypeHelper.cpp
lib/Validators/: CMakeLists.txt  LLZKValidationPasses.cpp
r1cs/include/: CMakeLists.txt
r1cs/include/r1cs/: InitAllDialects.h
r1cs/lib/r1cs/: Attrs.cpp  CMakeLists.txt  Dialect.cpp  Ops.cpp  Registration.cpp  Types.cpp
tools/llzk-lsp-server/: CMakeLists.txt  llzk-lsp-server.cpp
tools/llzk-tblgen/: AttrCAPIGen.cpp  AttrCAPITestGen.cpp  CMakeLists.txt  CommonAttrOrTypeCAPIGen.h  CommonAttrOrTypeCAPITestGen.cpp  CommonAttrOrTypeCAPITestGen.h  CommonCAPIGen.cpp  CommonCAPIGen.h  DialectCAPITestGen.cpp  EnumCAPIGen.cpp  EnumCAPITestGen.cpp  OpCAPIGen.cpp  OpCAPIParamHelper.cpp  OpCAPIParamHelper.h  OpCAPITestGen.cpp  TypeCAPIGen.cpp  TypeCAPITestGen.cpp  llzk-tblgen.cpp
tools/r1cs-opt/: CMakeLists.txt  r1cs-opt.cpp
(+3019 files in other folders)
